# Quantara

./: README.md
Myself/: .gitignore  API_TestPlace.ipynb  FinalPlace.ipynb  README.md  TestingPlaceforAllCode.ipynb  calculate.py  user_input.py
live-trading-bot/: Dockerfile  README.md  pyproject.toml  requirements.txt
live-trading-bot/scripts/: run_backtest.py  run_live.sh
live-trading-bot/src/: config.py  executor.py  main.py  utils.py
live-trading-bot/src/broker/: alpaca_client.py
live-trading-bot/src/data/: loader.py
live-trading-bot/src/indicators/: dmi.py  ema.py  macd.py  rsi.py  sma.py
live-trading-bot/src/strategies/: crossover.py
live-trading-bot/tests/: test_indicators.py  test_strategy.py
