[tool.poetry]
name = "live-trading-bot"
version = "0.1.0"
description = "A live trading bot that generates buy and sell signals and calculates indicators for trading."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
alpaca-trade-api = "^2.0.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"